Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -77,6 +77,274 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Konfiguration (Backend)\n",
+        "# Hinweis: \"origin\" kann optional per URL-Parameter übergeben werden:\n",
+        "# https://colab.research.google.com/github/.../LOTTO_6aus49_Datei.ipynb?origin=https://example.com\n",
+        "#\n",
+        "# In Colab können wir URL-Parameter oft über JavaScript auslesen.\n",
+        "# Falls das nicht klappt, verwenden wir BACKEND_URL_DEFAULT.\n",
+        "\n",
+        "BACKEND_URL_DEFAULT = \"https://apilotto.euroceiling39.ru\"\n",
+        "\n",
+        "# Modellparameter (wie im Original)\n",
+        "model_params = {\n",
+        "    \"batch_size\": 98,\n",
+        "    \"epochs\": 123,\n",
+        "    \"window_length\": 24\n",
+        "}\n",
+        "\n",
+        "# ----------------------------\n",
+        "# Hilfsfunktionen\n",
+        "# ----------------------------\n",
+        "def ui_set_status(html, kind=\"info\"):\n",
+        "    # kind: info/success/warn/error\n",
+        "    colors = {\n",
+        "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
+        "        \"success\":(\"#065f46\", \"#ecfdf5\", \"#a7f3d0\"),\n",
+        "        \"warn\":   (\"#92400e\", \"#fffbeb\", \"#fcd34d\"),\n",
+        "        \"error\":  (\"#991b1b\", \"#fef2f2\", \"#fecaca\"),\n",
+        "    }\n",
+        "    fg, bg, bd = colors.get(kind, colors[\"info\"])\n",
+        "    status.value = f\"\"\"\n",
+        "    <div style=\"margin-top:10px;padding:10px 12px;border-radius:12px;\n",
+        "                border:1px solid {bd}; background:{bg}; color:{fg}; font-size:13px\">\n",
+        "      {html}\n",
+        "    </div>\n",
+        "    \"\"\"\n",
+        "\n",
+        "def download_and_parse_lotto():\n",
+        "    # URL zum Herunterladen des Archivs\n",
+        "    url = \"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\"\n",
+        "\n",
+        "    tmp_dir = \"/content/tmp_lotto\"\n",
+        "    os.makedirs(tmp_dir, exist_ok=True)\n",
+        "\n",
+        "    r = requests.get(url, timeout=60)\n",
+        "    if r.status_code != 200:\n",
+        "        raise RuntimeError(f\"Download fehlgeschlagen. Status: {r.status_code}\")\n",
+        "\n",
+        "    # ZIP im Speicher öffnen und entpacken\n",
+        "    with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
+        "        z.extractall(tmp_dir)\n",
+        "\n",
+        "    txt_path = os.path.join(tmp_dir, \"lotto.txt\")\n",
+        "    if not os.path.exists(txt_path):\n",
+        "        raise RuntimeError(\"lotto.txt nicht gefunden (ZIP-Inhalt hat sich evtl. geändert).\")\n",
+        "\n",
+        "    with open(txt_path, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+        "        lines = f.readlines()\n",
+        "\n",
+        "    rows = []\n",
+        "    for line in lines[1:]:  # Kopfzeile überspringen\n",
+        "        parts = line.split()\n",
+        "        if len(parts) < 10:\n",
+        "            continue\n",
+        "\n",
+        "        tag, monat, jahr = parts[0], parts[1], parts[2]\n",
+        "        rest = parts[3:]\n",
+        "\n",
+        "        dt = datetime(int(jahr), int(monat), int(tag))\n",
+        "        if dt >= datetime(2013, 5, 4):\n",
+        "            datum = dt.strftime(\"%d.%m.%Y\")\n",
+        "            rest7 = rest[:7]  # 6 Zahlen + Superzahl\n",
+        "            if len(rest7) == 7:\n",
+        "                rows.append([datum] + rest7)\n",
+        "\n",
+        "    df = pd.DataFrame(rows, columns=[\"Datum\",\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"])\n",
+        "\n",
+        "    for c in [\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"]:\n",
+        "        df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
+        "\n",
+        "    df = df.dropna().reset_index(drop=True)\n",
+        "    if df.empty:\n",
+        "        raise RuntimeError(\"Keine Daten nach Filterung gefunden.\")\n",
+        "    return df\n",
+        "\n",
+        "def preprocess_df(df):\n",
+        "    # Datum und Superzahl entfernen\n",
+        "    df_numbers = df.drop([\"Datum\", \"Superzahl\"], axis=1).copy()\n",
+        "    # Zeilenweise sortieren (wie im Original)\n",
+        "    df_sorted = df_numbers.apply(lambda row: pd.Series(sorted(row.astype(int).tolist())), axis=1)\n",
+        "    return df_sorted\n",
+        "\n",
+        "def create_training_data(df_sorted, window_length):\n",
+        "    scaler = StandardScaler().fit(df_sorted)\n",
+        "    transformed_df = scaler.transform(df_sorted)\n",
+        "\n",
+        "    n_rows = df_sorted.shape[0]\n",
+        "    n_feat = df_sorted.shape[1]\n",
+        "\n",
+        "    X = np.empty([n_rows - window_length, window_length, n_feat], dtype=float)\n",
+        "    y = np.empty([n_rows - window_length, n_feat], dtype=float)\n",
+        "\n",
+        "    for i in range(0, n_rows - window_length):\n",
+        "        X[i] = transformed_df[i : i + window_length, 0 : n_feat]\n",
+        "        y[i] = transformed_df[i + window_length : i + window_length + 1, 0 : n_feat]\n",
+        "\n",
+        "    return X, y, scaler\n",
+        "\n",
+        "def create_model(input_shape, learning_rate=0.001):\n",
+        "    model = Sequential()\n",
+        "    model.add(Bidirectional(LSTM(240, input_shape=input_shape, return_sequences=True)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
+        "    model.add(Bidirectional(LSTM(240, return_sequences=False)))\n",
+        "    model.add(Dropout(0.2))\n",
+        "\n",
+        "    # Unverändert aus dem Original\n",
+        "    model.add(Dense(49))\n",
+        "    model.add(Dense(input_shape[1]))\n",
+        "\n",
+        "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss=\"mse\", metrics=[\"accuracy\"])\n",
+        "    return model\n",
+        "\n",
+        "def predict_last_window(model, df_sorted, scaler, window_length):\n",
+        "    to_predict = df_sorted.tail(window_length)\n",
+        "\n",
+        "    if to_predict.shape[0] < window_length:\n",
+        "        padding = np.zeros((window_length - to_predict.shape[0], to_predict.shape[1]))\n",
+        "        to_predict = np.vstack((padding, to_predict))\n",
+        "    else:\n",
+        "        to_predict = np.array(to_predict)\n",
+        "\n",
+        "    scaled_to_predict = scaler.transform(to_predict)\n",
+        "    y_pred = model.predict(np.array([scaled_to_predict]), verbose=0)\n",
+        "    predicted = scaler.inverse_transform(y_pred).astype(int)[0]\n",
+        "\n",
+        "    # Optional: Bereich 1..49\n",
+        "    predicted = np.clip(predicted, 1, 49)\n",
+        "    return predicted\n",
+        "\n",
+        "def get_origin_from_url_or_default():\n",
+        "    # Versucht, origin aus den Colab-URL-Parametern zu lesen.\n",
+        "    # Wenn nicht möglich, Default verwenden.\n",
+        "    try:\n",
+        "        # JavaScript-Bridge: gibt Window.location.search zurück\n",
+        "        from google.colab import output\n",
+        "        js = \"\"\"\n",
+        "        (function() {\n",
+        "          return window.location.search || \"\";\n",
+        "        })();\n",
+        "        \"\"\"\n",
+        "        q = output.eval_js(js)  # z.B. \"?origin=https%3A%2F%2Fexample.com\"\n",
+        "        if q and \"origin=\" in q:\n",
+        "            # sehr einfacher Parser\n",
+        "            import urllib.parse as up\n",
+        "            params = up.parse_qs(q.lstrip(\"?\"))\n",
+        "            origin = params.get(\"origin\", [None])[0]\n",
+        "            if origin:\n",
+        "                return origin\n",
+        "    except Exception:\n",
+        "        pass\n",
+        "\n",
+        "    return BACKEND_URL_DEFAULT\n",
+        "\n",
+        "def send_to_backend(backend_url, payload):\n",
+        "    r = requests.post(f\"{backend_url}/api/colab/update\", json=payload, timeout=30)\n",
+        "    return r\n",
+        "\n",
+        "# ----------------------------\n",
+        "# Runner (wird vom Button aufgerufen)\n",
+        "# ----------------------------\n",
+        "def run_pipeline(_=None):\n",
+        "    progress.value = 0\n",
+        "    with out:\n",
+        "        clear_output()\n",
+        "\n",
+        "    ui_set_status(\"Starte…\", \"info\")\n",
+        "\n",
+        "    try:\n",
+        "        progress.value = 5\n",
+        "        ui_set_status(\"1/5 Lade Lotto-Daten (ZIP) und parse lotto.txt…\", \"info\")\n",
+        "        df_raw = download_and_parse_lotto()\n",
+        "\n",
+        "        with out:\n",
+        "            print(\"✅ Daten geladen:\", df_raw.shape)\n",
+        "            display(df_raw.head())\n",
+        "\n",
+        "        progress.value = 20\n",
+        "        ui_set_status(\"2/5 Vorverarbeitung und Trainingsdaten erstellen…\", \"info\")\n",
+        "        df_sorted = preprocess_df(df_raw)\n",
+        "        X, y, scaler = create_training_data(df_sorted, model_params[\"window_length\"])\n",
+        "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.12, random_state=24)\n",
+        "\n",
+        "        progress.value = 35\n",
+        "        ui_set_status(\"3/5 Modell erstellen…\", \"info\")\n",
+        "        input_shape = (model_params[\"window_length\"], X.shape[2])\n",
+        "        model = create_model(input_shape)\n",
+        "\n",
+        "        model_params_runtime = dict(model_params)\n",
+        "        model_params_runtime.update({\n",
+        "            \"layers\": len(model.layers),\n",
+        "            \"optimizer\": str(model.optimizer),\n",
+        "            \"loss\": model.loss,\n",
+        "            \"metrics\": model.metrics_names,\n",
+        "        })\n",
+        "\n",
+        "        progress.value = 45\n",
+        "        ui_set_status(f\"4/5 Training läuft… (epochs={model_params_runtime['epochs']}, batch_size={model_params_runtime['batch_size']})\", \"warn\")\n",
+        "\n",
+        "        history = model.fit(\n",
+        "            x=X_train,\n",
+        "            y=y_train,\n",
+        "            batch_size=model_params_runtime[\"batch_size\"],\n",
+        "            epochs=model_params_runtime[\"epochs\"],\n",
+        "            verbose=2\n",
+        "        )\n",
+        "\n",
+        "        progress.value = 80\n",
+        "        ui_set_status(\"Training fertig. Evaluiere…\", \"info\")\n",
+        "        train_loss, train_accuracy = model.evaluate(X_train, y_train, verbose=0)\n",
+        "        test_loss, test_accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
+        "\n",
+        "        predicted_numbers = predict_last_window(model, df_sorted, scaler, model_params_runtime[\"window_length\"])\n",
+        "\n",
+        "        with out:\n",
+        "            print(\"\\n📌 Metriken\")\n",
+        "            print(f\"Train Loss: {train_loss}, Train Accuracy: {train_accuracy}\")\n",
+        "            print(f\"Test  Loss: {test_loss},  Test  Accuracy: {test_accuracy}\")\n",
+        "            print(\"\\n🎯 Vorhergesagte Zahlen:\", predicted_numbers)\n",
+        "\n",
+        "        progress.value = 90\n",
+        "        ui_set_status(\"5/5 Sende Ergebnisse ans Backend…\", \"info\")\n",
+        "\n",
+        "        backend_url = get_origin_from_url_or_default()\n",
+        "\n",
+        "        payload = {\n",
+        "            \"numbers\": predicted_numbers.tolist() if hasattr(predicted_numbers, \"tolist\") else list(predicted_numbers),\n",
+        "            \"train\": {\"loss\": float(train_loss), \"accuracy\": float(train_accuracy)},\n",
+        "            \"test\": {\"loss\": float(test_loss), \"accuracy\": float(test_accuracy)},\n",
+        "            \"model_params\": model_params_runtime,\n",
+        "            \"generated_at\": int(time.time()),\n",
+        "        }\n",
+        "\n",
+        "        resp = send_to_backend(backend_url, payload)\n",
+        "\n",
+        "        if resp.ok:\n",
+        "            ui_set_status(f\"✅ Gesendet! Backend: <code>{backend_url}</code><br>Antwort: {resp.status_code}\", \"success\")\n",
+        "            progress.value = 100\n",
+        "        else:\n",
+        "            ui_set_status(f\"❌ Fehler beim Senden: {resp.status_code}<br><pre style='white-space:pre-wrap'>{resp.text[:800]}</pre>\", \"error\")\n",
+        "            progress.value = 100\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        ui_set_status(f\"⚠️ Lauf fehlgeschlagen: <code>{str(e)}</code>\", \"error\")\n",
+        "        progress.value = 100\n",
+        "\n",
+        "btn_run.on_click(run_pipeline)\n",
+        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")\n"
+      ],
+      "metadata": {
+        "id": "eYx8hQO-UhVs"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
