Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -20,6 +20,35 @@
     {
       "cell_type": "code",
       "source": [
+        "# Imports\n",
+        "import os\n",
+        "import io\n",
+        "import time\n",
+        "import json\n",
+        "import zipfile\n",
+        "import requests\n",
+        "from datetime import datetime\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import pytz\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
+        "from tensorflow.keras.optimizers import Adam"
+      ],
+      "metadata": {
+        "id": "sG-w52P2iWRx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# UI (Button) – für eine \"schöne\" Ausführung direkt im Notebook\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML, clear_output\n",
@@ -50,35 +79,6 @@
       ],
       "metadata": {
         "id": "x6GC_jCkUW8M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Imports\n",
-        "import os\n",
-        "import io\n",
-        "import time\n",
-        "import json\n",
-        "import zipfile\n",
-        "import requests\n",
-        "from datetime import datetime\n",
-        "\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import pytz\n",
-        "\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
-        "from tensorflow.keras.optimizers import Adam"
-      ],
-      "metadata": {
-        "id": "5vcVknNwi-AQ"
       },
       "execution_count": null,
       "outputs": []
@@ -259,28 +259,34 @@
         "# ----------------------------\n",
         "def run_pipeline(_=None):\n",
         "    progress.value = 0\n",
-        "    with out:\n",
+        "    tabs.selected_index = 0  # показываем \"Ergebnis\"\n",
+        "    with out_result:\n",
         "        clear_output()\n",
+        "    log_area.value = \"\"\n",
         "\n",
         "    ui_set_status(\"Starte…\", \"info\")\n",
+        "    log(\"Starte Pipeline…\")\n",
         "\n",
         "    try:\n",
         "        progress.value = 5\n",
         "        ui_set_status(\"1/5 Lade Lotto-Daten (ZIP) und parse lotto.txt…\", \"info\")\n",
+        "        log(\"1/5 Download + Parse lotto.txt…\")\n",
         "        df_raw = download_and_parse_lotto()\n",
         "\n",
-        "        with out:\n",
+        "        with out_result:\n",
         "            print(\"✅ Daten geladen:\", df_raw.shape)\n",
         "            display(df_raw.head())\n",
         "\n",
         "        progress.value = 20\n",
         "        ui_set_status(\"2/5 Vorverarbeitung und Trainingsdaten erstellen…\", \"info\")\n",
+        "        log(\"2/5 Vorverarbeitung + Training-Daten…\")\n",
         "        df_sorted = preprocess_df(df_raw)\n",
         "        X, y, scaler = create_training_data(df_sorted, model_params[\"window_length\"])\n",
         "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.12, random_state=24)\n",
         "\n",
         "        progress.value = 35\n",
         "        ui_set_status(\"3/5 Modell erstellen…\", \"info\")\n",
+        "        log(\"3/5 Modell erstellen…\")\n",
         "        input_shape = (model_params[\"window_length\"], X.shape[2])\n",
         "        model = create_model(input_shape)\n",
         "\n",
@@ -294,23 +300,35 @@
         "\n",
         "        progress.value = 45\n",
         "        ui_set_status(f\"4/5 Training läuft… (epochs={model_params_runtime['epochs']}, batch_size={model_params_runtime['batch_size']})\", \"warn\")\n",
+        "        log(f\"4/5 Training läuft… epochs={model_params_runtime['epochs']}, batch_size={model_params_runtime['batch_size']}\")\n",
         "\n",
+        "        cb = UIProgressCallback(\n",
+        "            total_epochs=model_params_runtime[\"epochs\"],\n",
+        "            log_fn=log,\n",
+        "            progress_widget=progress,\n",
+        "            base_progress=45,\n",
+        "            span=35\n",
+        "        )\n",
+        "\n",
+        "        # WICHTIG: verbose=0, damit keine endlosen Logs in der Zelle erscheinen\n",
         "        history = model.fit(\n",
         "            x=X_train,\n",
         "            y=y_train,\n",
         "            batch_size=model_params_runtime[\"batch_size\"],\n",
         "            epochs=model_params_runtime[\"epochs\"],\n",
-        "            verbose=2\n",
+        "            verbose=0,\n",
+        "            callbacks=[cb]\n",
         "        )\n",
         "\n",
-        "        progress.value = 80\n",
+        "        progress.value = 82\n",
         "        ui_set_status(\"Training fertig. Evaluiere…\", \"info\")\n",
+        "        log(\"Training fertig. Evaluiere…\")\n",
         "        train_loss, train_accuracy = model.evaluate(X_train, y_train, verbose=0)\n",
         "        test_loss, test_accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
         "\n",
         "        predicted_numbers = predict_last_window(model, df_sorted, scaler, model_params_runtime[\"window_length\"])\n",
         "\n",
-        "        with out:\n",
+        "        with out_result:\n",
         "            print(\"\\n📌 Metriken\")\n",
         "            print(f\"Train Loss: {train_loss}, Train Accuracy: {train_accuracy}\")\n",
         "            print(f\"Test  Loss: {test_loss},  Test  Accuracy: {test_accuracy}\")\n",
@@ -318,8 +336,9 @@
         "\n",
         "        progress.value = 90\n",
         "        ui_set_status(\"5/5 Sende Ergebnisse ans Backend…\", \"info\")\n",
-        "\n",
+        "        log(\"5/5 Sende Ergebnisse ans Backend…\")\n",
         "        backend_url = get_origin_from_url_or_default()\n",
+        "        log(f\"Backend URL: {backend_url}\")\n",
         "\n",
         "        payload = {\n",
         "            \"numbers\": predicted_numbers.tolist() if hasattr(predicted_numbers, \"tolist\") else list(predicted_numbers),\n",
@@ -333,13 +352,17 @@
         "\n",
         "        if resp.ok:\n",
         "            ui_set_status(f\"✅ Gesendet! Backend: <code>{backend_url}</code><br>Antwort: {resp.status_code}\", \"success\")\n",
+        "            log(f\"✅ Gesendet! HTTP {resp.status_code}\")\n",
         "            progress.value = 100\n",
         "        else:\n",
         "            ui_set_status(f\"❌ Fehler beim Senden: {resp.status_code}<br><pre style='white-space:pre-wrap'>{resp.text[:800]}</pre>\", \"error\")\n",
+        "            log(f\"❌ Fehler beim Senden: HTTP {resp.status_code}\")\n",
+        "            log(resp.text[:800])\n",
         "            progress.value = 100\n",
         "\n",
         "    except Exception as e:\n",
         "        ui_set_status(f\"⚠️ Lauf fehlgeschlagen: <code>{str(e)}</code>\", \"error\")\n",
+        "        log(f\"⚠️ Fehler: {e}\")\n",
         "        progress.value = 100\n",
         "\n",
         "btn_run.on_click(run_pipeline)\n",
