Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -38,7 +38,8 @@
         "\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
-        "from tensorflow.keras.optimizers import Adam"
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.callbacks import Callback"
       ],
       "metadata": {
         "id": "sG-w52P2iWRx"
@@ -49,10 +50,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# UI (Button) – für eine \"schöne\" Ausführung direkt im Notebook\n",
+        "# UI (Button) – saubere Trennung: Status / Ergebnis / Logs (ohne Scroll-Chaos)\n",
         "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
+        "from IPython.display import display, clear_output\n",
         "\n",
+        "# --- Header / Controls ---\n",
         "title = widgets.HTML(\n",
         "    value=\"\"\"\n",
         "    <div style=\"padding:14px;border-radius:12px;border:1px solid #e5e7eb;background:#fafafa\">\n",
@@ -71,11 +73,69 @@
         "    layout=widgets.Layout(width=\"180px\", height=\"40px\")\n",
         ")\n",
         "\n",
-        "status = widgets.HTML(value=\"\")\n",
-        "out = widgets.Output(layout={\"border\":\"1px solid #e5e7eb\",\"border_radius\":\"12px\",\"padding\":\"10px\"})\n",
-        "progress = widgets.IntProgress(value=0, min=0, max=100, description=\"Fortschritt:\", bar_style=\"info\")\n",
+        "btn_clear = widgets.Button(\n",
+        "    description=\"🧹 Clear\",\n",
+        "    button_style=\"\",\n",
+        "    tooltip=\"Leert Ergebnis/Logs\",\n",
+        "    layout=widgets.Layout(width=\"120px\", height=\"40px\")\n",
+        ")\n",
         "\n",
-        "display(title, widgets.HBox([btn_run, progress]), status, out)\n"
+        "progress = widgets.IntProgress(value=0, min=0, max=100, description=\"Fortschritt:\", bar_style=\"info\")\n",
+        "status = widgets.HTML(value=\"\")\n",
+        "\n",
+        "# --- Ergebnis & Logs getrennt ---\n",
+        "out_result = widgets.Output(layout={\n",
+        "    \"border\":\"1px solid #e5e7eb\",\n",
+        "    \"border_radius\":\"12px\",\n",
+        "    \"padding\":\"10px\",\n",
+        "    \"height\":\"260px\",\n",
+        "    \"overflow\":\"auto\"\n",
+        "})\n",
+        "\n",
+        "log_area = widgets.Textarea(\n",
+        "    value=\"\",\n",
+        "    placeholder=\"Logs erscheinen hier…\",\n",
+        "    layout=widgets.Layout(width=\"100%\", height=\"260px\")\n",
+        ")\n",
+        "\n",
+        "tabs = widgets.Tab(children=[out_result, log_area])\n",
+        "tabs.set_title(0, \"Ergebnis\")\n",
+        "tabs.set_title(1, \"Logs\")\n",
+        "\n",
+        "controls = widgets.HBox([btn_run, btn_clear, progress], layout=widgets.Layout(gap=\"10px\"))\n",
+        "ui = widgets.VBox([title, controls, status, tabs], layout=widgets.Layout(gap=\"10px\"))\n",
+        "\n",
+        "display(ui)\n",
+        "\n",
+        "def ui_set_status(html, kind=\"info\"):\n",
+        "    colors = {\n",
+        "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
+        "        \"success\":(\"#065f46\", \"#ecfdf5\", \"#a7f3d0\"),\n",
+        "        \"warn\":   (\"#92400e\", \"#fffbeb\", \"#fcd34d\"),\n",
+        "        \"error\":  (\"#991b1b\", \"#fef2f2\", \"#fecaca\"),\n",
+        "    }\n",
+        "    fg, bg, bd = colors.get(kind, colors[\"info\"])\n",
+        "    status.value = f\"\"\"\n",
+        "    <div style=\"margin-top:10px;padding:10px 12px;border-radius:12px;\n",
+        "                border:1px solid {bd}; background:{bg}; color:{fg}; font-size:13px\">\n",
+        "      {html}\n",
+        "    </div>\n",
+        "    \"\"\"\n",
+        "\n",
+        "def log(msg):\n",
+        "    # Logs in Textarea (stört UI nicht)\n",
+        "    log_area.value = (log_area.value + msg + \"\\n\") if log_area.value else (msg + \"\\n\")\n",
+        "\n",
+        "def clear_all(_=None):\n",
+        "    progress.value = 0\n",
+        "    status.value = \"\"\n",
+        "    log_area.value = \"\"\n",
+        "    with out_result:\n",
+        "        clear_output()\n",
+        "\n",
+        "btn_clear.on_click(clear_all)\n",
+        "\n",
+        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
       ],
       "metadata": {
         "id": "x6GC_jCkUW8M"
@@ -254,12 +314,41 @@
         "    r = requests.post(f\"{backend_url}/api/colab/update\", json=payload, timeout=30)\n",
         "    return r\n",
         "\n",
+        "\n",
+        "from tensorflow.keras.callbacks import Callback\n",
+        "\n",
+        "class UIProgressCallback(Callback):\n",
+        "    def __init__(self, total_epochs, log_fn, progress_widget, base_progress=45, span=35):\n",
+        "        super().__init__()\n",
+        "        self.total_epochs = total_epochs\n",
+        "        self.log_fn = log_fn\n",
+        "        self.progress_widget = progress_widget\n",
+        "        self.base = base_progress     # training\n",
+        "        self.span = span              # wie viel Prozent nimmt ein training\n",
+        "    def on_train_begin(self, logs=None):\n",
+        "        self.log_fn(\"Training gestartet…\")\n",
+        "    def on_epoch_end(self, epoch, logs=None):\n",
+        "        logs = logs or {}\n",
+        "        ep = epoch + 1\n",
+        "        loss = logs.get(\"loss\", None)\n",
+        "        acc  = logs.get(\"accuracy\", None)\n",
+        "        msg = f\"Epoch {ep}/{self.total_epochs} – loss={loss:.6f}\" if loss is not None else f\"Epoch {ep}/{self.total_epochs}\"\n",
+        "        if acc is not None:\n",
+        "            msg += f\", acc={acc:.6f}\"\n",
+        "        self.log_fn(msg)\n",
+        "\n",
+        "        # Fortschritt updaten\n",
+        "        frac = ep / float(self.total_epochs)\n",
+        "        self.progress_widget.value = min(100, int(self.base + self.span * frac))\n",
+        "\n",
+        "\n",
+        "\n",
         "# ----------------------------\n",
         "# Runner (wird vom Button aufgerufen)\n",
         "# ----------------------------\n",
         "def run_pipeline(_=None):\n",
         "    progress.value = 0\n",
-        "    tabs.selected_index = 0  # показываем \"Ergebnis\"\n",
+        "    tabs.selected_index = 0  # \"Ergebnis\"\n",
         "    with out_result:\n",
         "        clear_output()\n",
         "    log_area.value = \"\"\n",
