Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -20,6 +20,123 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title\n",
+        "# --- Sticky UI Panel (bleibt immer oben sichtbar) ---\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, HTML, clear_output\n",
+        "\n",
+        "# 1) CSS: sticky top bar\n",
+        "display(HTML(\"\"\"\n",
+        "<style>\n",
+        "/* Sticky container */\n",
+        "#lotto_sticky_bar {\n",
+        "  position: sticky;\n",
+        "  top: 0;\n",
+        "  z-index: 9999;\n",
+        "  background: white;\n",
+        "  border: 1px solid #e5e7eb;\n",
+        "  border-radius: 14px;\n",
+        "  padding: 12px;\n",
+        "  margin-bottom: 10px;\n",
+        "  box-shadow: 0 8px 24px rgba(0,0,0,0.06);\n",
+        "}\n",
+        "\n",
+        "/* Make the notebook width nicer */\n",
+        ".output-area { max-width: 1100px; }\n",
+        "</style>\n",
+        "\"\"\"))\n",
+        "\n",
+        "# 2) Widgets\n",
+        "title = widgets.HTML(\n",
+        "    value=\"\"\"\n",
+        "    <div style=\"display:flex;align-items:center;justify-content:space-between;gap:12px\">\n",
+        "      <div>\n",
+        "        <div style=\"font-size:18px;font-weight:800\">LOTTO 6aus49 – Runner</div>\n",
+        "        <div style=\"font-size:12.5px;color:#4b5563\">Klicke auf ▶ Ausführen. Logs bleiben separat.</div>\n",
+        "      </div>\n",
+        "    </div>\n",
+        "    \"\"\"\n",
+        ")\n",
+        "\n",
+        "btn_run = widgets.Button(\n",
+        "    description=\"▶ Ausführen\",\n",
+        "    button_style=\"success\",\n",
+        "    tooltip=\"Startet den kompletten Lauf\",\n",
+        "    layout=widgets.Layout(width=\"170px\", height=\"40px\")\n",
+        ")\n",
+        "\n",
+        "btn_clear = widgets.Button(\n",
+        "    description=\"🧹 Clear\",\n",
+        "    tooltip=\"Leert Ergebnis/Logs\",\n",
+        "    layout=widgets.Layout(width=\"120px\", height=\"40px\")\n",
+        ")\n",
+        "\n",
+        "progress = widgets.IntProgress(value=0, min=0, max=100, description=\"Fortschritt:\", bar_style=\"info\")\n",
+        "status = widgets.HTML(value=\"\")\n",
+        "\n",
+        "out_result = widgets.Output(layout={\n",
+        "    \"border\":\"1px solid #e5e7eb\",\n",
+        "    \"border_radius\":\"12px\",\n",
+        "    \"padding\":\"10px\",\n",
+        "    \"height\":\"260px\",\n",
+        "    \"overflow\":\"auto\"\n",
+        "})\n",
+        "\n",
+        "log_area = widgets.Textarea(\n",
+        "    value=\"\",\n",
+        "    placeholder=\"Logs erscheinen hier…\",\n",
+        "    layout=widgets.Layout(width=\"100%\", height=\"260px\")\n",
+        ")\n",
+        "\n",
+        "tabs = widgets.Tab(children=[out_result, log_area])\n",
+        "tabs.set_title(0, \"Ergebnis\")\n",
+        "tabs.set_title(1, \"Logs\")\n",
+        "\n",
+        "controls = widgets.HBox([btn_run, btn_clear, progress], layout=widgets.Layout(gap=\"10px\"))\n",
+        "\n",
+        "# 3) Wrap into a sticky HTML container\n",
+        "display(HTML('<div id=\"lotto_sticky_bar\"></div>'))\n",
+        "display(widgets.VBox([title, controls, status, tabs]))\n",
+        "\n",
+        "# 4) Hilfsfunktionen\n",
+        "def ui_set_status(html, kind=\"info\"):\n",
+        "    colors = {\n",
+        "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
+        "        \"success\":(\"#065f46\", \"#ecfdf5\", \"#a7f3d0\"),\n",
+        "        \"warn\":   (\"#92400e\", \"#fffbeb\", \"#fcd34d\"),\n",
+        "        \"error\":  (\"#991b1b\", \"#fef2f2\", \"#fecaca\"),\n",
+        "    }\n",
+        "    fg, bg, bd = colors.get(kind, colors[\"info\"])\n",
+        "    status.value = f\"\"\"\n",
+        "    <div style=\"margin-top:10px;padding:10px 12px;border-radius:12px;\n",
+        "                border:1px solid {bd}; background:{bg}; color:{fg}; font-size:13px\">\n",
+        "      {html}\n",
+        "    </div>\n",
+        "    \"\"\"\n",
+        "\n",
+        "def log(msg):\n",
+        "    log_area.value = (log_area.value + msg + \"\\n\") if log_area.value else (msg + \"\\n\")\n",
+        "\n",
+        "def clear_all(_=None):\n",
+        "    progress.value = 0\n",
+        "    status.value = \"\"\n",
+        "    log_area.value = \"\"\n",
+        "    with out_result:\n",
+        "        clear_output()\n",
+        "\n",
+        "btn_clear.on_click(clear_all)\n",
+        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "F18wNlu-mVPE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Imports\n",
         "import os\n",
         "import io\n",
@@ -44,103 +161,7 @@
       "metadata": {
         "id": "sG-w52P2iWRx"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# UI (Button) – saubere Trennung: Status / Ergebnis / Logs (ohne Scroll-Chaos)\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, clear_output\n",
-        "\n",
-        "# --- Header / Controls ---\n",
-        "title = widgets.HTML(\n",
-        "    value=\"\"\"\n",
-        "    <div style=\"padding:14px;border-radius:12px;border:1px solid #e5e7eb;background:#fafafa\">\n",
-        "      <div style=\"font-size:18px;font-weight:700;margin-bottom:6px\">LOTTO 6aus49 – Colab Runner</div>\n",
-        "      <div style=\"color:#374151;font-size:13px;line-height:1.45\">\n",
-        "        Klicke auf <b>▶ Ausführen</b>, um Daten zu laden, das Modell zu trainieren, Zahlen vorherzusagen und ans Backend zu senden.\n",
-        "      </div>\n",
-        "    </div>\n",
-        "    \"\"\"\n",
-        ")\n",
-        "\n",
-        "btn_run = widgets.Button(\n",
-        "    description=\"▶ Ausführen\",\n",
-        "    button_style=\"success\",\n",
-        "    tooltip=\"Startet den kompletten Lauf\",\n",
-        "    layout=widgets.Layout(width=\"180px\", height=\"40px\")\n",
-        ")\n",
-        "\n",
-        "btn_clear = widgets.Button(\n",
-        "    description=\"🧹 Clear\",\n",
-        "    button_style=\"\",\n",
-        "    tooltip=\"Leert Ergebnis/Logs\",\n",
-        "    layout=widgets.Layout(width=\"120px\", height=\"40px\")\n",
-        ")\n",
-        "\n",
-        "progress = widgets.IntProgress(value=0, min=0, max=100, description=\"Fortschritt:\", bar_style=\"info\")\n",
-        "status = widgets.HTML(value=\"\")\n",
-        "\n",
-        "# --- Ergebnis & Logs getrennt ---\n",
-        "out_result = widgets.Output(layout={\n",
-        "    \"border\":\"1px solid #e5e7eb\",\n",
-        "    \"border_radius\":\"12px\",\n",
-        "    \"padding\":\"10px\",\n",
-        "    \"height\":\"260px\",\n",
-        "    \"overflow\":\"auto\"\n",
-        "})\n",
-        "\n",
-        "log_area = widgets.Textarea(\n",
-        "    value=\"\",\n",
-        "    placeholder=\"Logs erscheinen hier…\",\n",
-        "    layout=widgets.Layout(width=\"100%\", height=\"260px\")\n",
-        ")\n",
-        "\n",
-        "tabs = widgets.Tab(children=[out_result, log_area])\n",
-        "tabs.set_title(0, \"Ergebnis\")\n",
-        "tabs.set_title(1, \"Logs\")\n",
-        "\n",
-        "controls = widgets.HBox([btn_run, btn_clear, progress], layout=widgets.Layout(gap=\"10px\"))\n",
-        "ui = widgets.VBox([title, controls, status, tabs], layout=widgets.Layout(gap=\"10px\"))\n",
-        "\n",
-        "display(ui)\n",
-        "\n",
-        "def ui_set_status(html, kind=\"info\"):\n",
-        "    colors = {\n",
-        "        \"info\":   (\"#1f2937\", \"#eef2ff\", \"#c7d2fe\"),\n",
-        "        \"success\":(\"#065f46\", \"#ecfdf5\", \"#a7f3d0\"),\n",
-        "        \"warn\":   (\"#92400e\", \"#fffbeb\", \"#fcd34d\"),\n",
-        "        \"error\":  (\"#991b1b\", \"#fef2f2\", \"#fecaca\"),\n",
-        "    }\n",
-        "    fg, bg, bd = colors.get(kind, colors[\"info\"])\n",
-        "    status.value = f\"\"\"\n",
-        "    <div style=\"margin-top:10px;padding:10px 12px;border-radius:12px;\n",
-        "                border:1px solid {bd}; background:{bg}; color:{fg}; font-size:13px\">\n",
-        "      {html}\n",
-        "    </div>\n",
-        "    \"\"\"\n",
-        "\n",
-        "def log(msg):\n",
-        "    # Logs in Textarea (stört UI nicht)\n",
-        "    log_area.value = (log_area.value + msg + \"\\n\") if log_area.value else (msg + \"\\n\")\n",
-        "\n",
-        "def clear_all(_=None):\n",
-        "    progress.value = 0\n",
-        "    status.value = \"\"\n",
-        "    log_area.value = \"\"\n",
-        "    with out_result:\n",
-        "        clear_output()\n",
-        "\n",
-        "btn_clear.on_click(clear_all)\n",
-        "\n",
-        "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
-      ],
-      "metadata": {
-        "id": "x6GC_jCkUW8M"
-      },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -460,7 +481,7 @@
       "metadata": {
         "id": "eYx8hQO-UhVs"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     }
   ],
