Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -9,9 +9,9 @@
         "\n",
         "1. **Alles ausführen:** Gehen Sie oben im Menü auf **Laufzeit** → **Alle ausführen**.\n",
         "2. **Warnung bestätigen:** Wenn das Fenster *\"Warnung: Dieses Notebook wurde nicht von Google erstellt\"* erscheint, klicken Sie auf **„Trotzdem ausführen“**.\n",
-        "\n",
+        "3. **Berechnung starten:** Sobald das Bedienfeld erscheint, klicken Sie unten auf die grüne Schaltfläche **▶ Ausführen**.\n",
         "---\n",
-        "*Die Warnung erscheint automatisch für alle Dateien von externen Quellen (GitHub).*"
+        "*Die Warnung ist eine Google-Sicherheitsmaßnahme für GitHub-Dateien. Die grüne Schaltfläche trainiert das KI-Modell und sendet die Prognosen an die App.*"
       ],
       "metadata": {
         "id": "ZIA0FXgkgnvW"
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "sG-w52P2iWRx"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
       "metadata": {
         "id": "eYx8hQO-UhVs"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     }
   ],
